ass1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'Int'", "'Float'", "'String'", 
                     "'Boolean'", "'Void'", "<INVALID>", "'Class'", "'Val'", 
                     "'Var'", "'Break'", "'Foreach'", "'Null'", "'Constructor'", 
                     "'Destructor'", "'Continue'", "'True'", "'If'", "'False'", 
                     "'New'", "'Else'", "'Elseif'", "'By'", "'Return'", 
                     "'In'", "'While'", "'Array'", "'Self'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "';'", "':'", "','", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'||'", "'&&'", "'!='", "'=='", 
                     "'='", "'<'", "'>'", "'<='", "'>='", "'.'", "'::'", 
                     "'==.'", "'+.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT_LITERAL", "FL_LITERAL", 
                      "BOOL_LITERAL", "STRING_LITERAL", "TYPE", "INTTYPE", 
                      "FLOATTYPE", "STRTYPE", "BOOLTYPE", "VOIDTYPE", "ARRAYTYPE", 
                      "CLASS", "VAL", "VAR", "BREAK", "FOREACH", "NULL", 
                      "CONSTRUC", "DESTRUC", "CONTINUE", "TRUE", "IF", "FALSE", 
                      "NEW", "ELSE", "ELSEIF", "BY", "RETURN", "IN", "WHILE", 
                      "ARRAY", "SELF", "BLOCK_COMMENT", "ID", "Dollar_ID", 
                      "LB", "RB", "LP", "RP", "SEMI", "COLON", "CM", "LSB", 
                      "RSB", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "OR", 
                      "AND", "NEQ", "EQ", "ASSIGN", "LT", "GT", "LE", "GE", 
                      "DOT", "ACCESS", "STR_CMP", "STR_CAT", "WS", "UNTERMINATED_COMMENT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declare = 1
    RULE_body_class = 2
    RULE_code_list = 3
    RULE_attribute_declare = 4
    RULE_values_list = 5
    RULE_method = 6
    RULE_method_declare = 7
    RULE_destructor_declare = 8
    RULE_constructor_declare = 9
    RULE_list_ID = 10
    RULE_list_dollar_ID = 11
    RULE_list_IDs = 12
    RULE_exp0 = 13
    RULE_exp1 = 14
    RULE_exp2 = 15
    RULE_exp3 = 16
    RULE_exp4 = 17
    RULE_exp5 = 18
    RULE_exp6 = 19
    RULE_exp7 = 20
    RULE_exp8 = 21
    RULE_exp9 = 22
    RULE_exp10 = 23
    RULE_exp11 = 24
    RULE_index_operator = 25
    RULE_operands = 26
    RULE_literal = 27
    RULE_call_func = 28
    RULE_params_list = 29
    RULE_param = 30
    RULE_member_access = 31
    RULE_in_att = 32
    RULE_in_method = 33
    RULE_stt_att = 34
    RULE_stt_method = 35
    RULE_new_epx = 36
    RULE_list_exp = 37
    RULE_varconst_declare = 38
    RULE_stmt_assign = 39
    RULE_lhs = 40
    RULE_stmt_if = 41
    RULE_stmt_elif = 42
    RULE_stmt_else = 43
    RULE_stmt_foreach = 44
    RULE_stmt_while = 45
    RULE_stmt_break = 46
    RULE_stmt_continue = 47
    RULE_stmt_call = 48
    RULE_stmt_return = 49
    RULE_stmt_callMethod = 50
    RULE_block_stmt = 51
    RULE_stmt = 52
    RULE_array = 53
    RULE_i_array = 54
    RULE_m_array = 55
    RULE_listLIT = 56
    RULE_listARRAY = 57

    ruleNames =  [ "program", "class_declare", "body_class", "code_list", 
                   "attribute_declare", "values_list", "method", "method_declare", 
                   "destructor_declare", "constructor_declare", "list_ID", 
                   "list_dollar_ID", "list_IDs", "exp0", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "exp10", "exp11", "index_operator", "operands", "literal", 
                   "call_func", "params_list", "param", "member_access", 
                   "in_att", "in_method", "stt_att", "stt_method", "new_epx", 
                   "list_exp", "varconst_declare", "stmt_assign", "lhs", 
                   "stmt_if", "stmt_elif", "stmt_else", "stmt_foreach", 
                   "stmt_while", "stmt_break", "stmt_continue", "stmt_call", 
                   "stmt_return", "stmt_callMethod", "block_stmt", "stmt", 
                   "array", "i_array", "m_array", "listLIT", "listARRAY" ]

    EOF = Token.EOF
    T__0=1
    INT_LITERAL=2
    FL_LITERAL=3
    BOOL_LITERAL=4
    STRING_LITERAL=5
    TYPE=6
    INTTYPE=7
    FLOATTYPE=8
    STRTYPE=9
    BOOLTYPE=10
    VOIDTYPE=11
    ARRAYTYPE=12
    CLASS=13
    VAL=14
    VAR=15
    BREAK=16
    FOREACH=17
    NULL=18
    CONSTRUC=19
    DESTRUC=20
    CONTINUE=21
    TRUE=22
    IF=23
    FALSE=24
    NEW=25
    ELSE=26
    ELSEIF=27
    BY=28
    RETURN=29
    IN=30
    WHILE=31
    ARRAY=32
    SELF=33
    BLOCK_COMMENT=34
    ID=35
    Dollar_ID=36
    LB=37
    RB=38
    LP=39
    RP=40
    SEMI=41
    COLON=42
    CM=43
    LSB=44
    RSB=45
    ADD=46
    SUB=47
    MUL=48
    DIV=49
    MOD=50
    NOT=51
    OR=52
    AND=53
    NEQ=54
    EQ=55
    ASSIGN=56
    LT=57
    GT=58
    LE=59
    GE=60
    DOT=61
    ACCESS=62
    STR_CMP=63
    STR_CAT=64
    WS=65
    UNTERMINATED_COMMENT=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.class_declare()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 121
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def body_class(self):
            return self.getTypedRuleContext(D96Parser.Body_classContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declare" ):
                return visitor.visitClass_declare(self)
            else:
                return visitor.visitChildren(self)




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(D96Parser.CLASS)
            self.state = 124
            self.match(D96Parser.ID)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 125
                self.match(D96Parser.COLON)
                self.state = 126
                self.match(D96Parser.ID)


            self.state = 129
            self.match(D96Parser.LP)
            self.state = 130
            self.body_class()
            self.state = 131
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_list(self):
            return self.getTypedRuleContext(D96Parser.Code_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body_class

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_class" ):
                return visitor.visitBody_class(self)
            else:
                return visitor.visitChildren(self)




    def body_class(self):

        localctx = D96Parser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_body_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.code_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Attribute_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Attribute_declareContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MethodContext)
            else:
                return self.getTypedRuleContext(D96Parser.MethodContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_code_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_list" ):
                return visitor.visitCode_list(self)
            else:
                return visitor.visitChildren(self)




    def code_list(self):

        localctx = D96Parser.Code_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_code_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUC) | (1 << D96Parser.DESTRUC) | (1 << D96Parser.ID) | (1 << D96Parser.Dollar_ID))) != 0):
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL, D96Parser.VAR]:
                    self.state = 135
                    self.attribute_declare()
                    pass
                elif token in [D96Parser.CONSTRUC, D96Parser.DESTRUC, D96Parser.ID, D96Parser.Dollar_ID]:
                    self.state = 136
                    self.method()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_ID(self):
            return self.getTypedRuleContext(D96Parser.List_IDContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def values_list(self):
            return self.getTypedRuleContext(D96Parser.Values_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_declare" ):
                return visitor.visitAttribute_declare(self)
            else:
                return visitor.visitChildren(self)




    def attribute_declare(self):

        localctx = D96Parser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 143
            self.list_ID()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN:
                self.state = 144
                self.match(D96Parser.ASSIGN)
                self.state = 145
                self.values_list()


            self.state = 148
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Values_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Exp0Context)
            else:
                return self.getTypedRuleContext(D96Parser.Exp0Context,i)


        def member_access(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Member_accessContext)
            else:
                return self.getTypedRuleContext(D96Parser.Member_accessContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def getRuleIndex(self):
            return D96Parser.RULE_values_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValues_list" ):
                return visitor.visitValues_list(self)
            else:
                return visitor.visitChildren(self)




    def values_list(self):

        localctx = D96Parser.Values_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_values_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.CM:
                    self.state = 150
                    self.match(D96Parser.CM)


                self.state = 155
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 153
                    self.exp0()
                    pass

                elif la_ == 2:
                    self.state = 154
                    self.member_access()
                    pass


                self.state = 159 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT_LITERAL) | (1 << D96Parser.FL_LITERAL) | (1 << D96Parser.BOOL_LITERAL) | (1 << D96Parser.STRING_LITERAL) | (1 << D96Parser.NEW) | (1 << D96Parser.ARRAY) | (1 << D96Parser.SELF) | (1 << D96Parser.ID) | (1 << D96Parser.LB) | (1 << D96Parser.CM) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def destructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Destructor_declareContext,0)


        def constructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Constructor_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.Dollar_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.method_declare()
                pass
            elif token in [D96Parser.DESTRUC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.destructor_declare()
                pass
            elif token in [D96Parser.CONSTRUC]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.constructor_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def Dollar_ID(self):
            return self.getToken(D96Parser.Dollar_ID, 0)

        def list_IDs(self):
            return self.getTypedRuleContext(D96Parser.List_IDsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declare" ):
                return visitor.visitMethod_declare(self)
            else:
                return visitor.visitChildren(self)




    def method_declare(self):

        localctx = D96Parser.Method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.Dollar_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 167
            self.match(D96Parser.LB)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.ID) | (1 << D96Parser.Dollar_ID) | (1 << D96Parser.SEMI) | (1 << D96Parser.CM))) != 0):
                self.state = 168
                self.list_IDs()


            self.state = 171
            self.match(D96Parser.RB)
            self.state = 172
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Destructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUC(self):
            return self.getToken(D96Parser.DESTRUC, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDestructor_declare" ):
                return visitor.visitDestructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def destructor_declare(self):

        localctx = D96Parser.Destructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_destructor_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(D96Parser.DESTRUC)
            self.state = 175
            self.match(D96Parser.LB)
            self.state = 176
            self.match(D96Parser.RB)
            self.state = 177
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUC(self):
            return self.getToken(D96Parser.CONSTRUC, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def list_IDs(self):
            return self.getTypedRuleContext(D96Parser.List_IDsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_declare" ):
                return visitor.visitConstructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def constructor_declare(self):

        localctx = D96Parser.Constructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constructor_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(D96Parser.CONSTRUC)
            self.state = 180
            self.match(D96Parser.LB)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.ID) | (1 << D96Parser.Dollar_ID) | (1 << D96Parser.SEMI) | (1 << D96Parser.CM))) != 0):
                self.state = 181
                self.list_IDs()


            self.state = 184
            self.match(D96Parser.RB)
            self.state = 185
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_IDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def TYPE(self):
            return self.getToken(D96Parser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def Dollar_ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.Dollar_ID)
            else:
                return self.getToken(D96Parser.Dollar_ID, i)
